--- a/qt-toolkit/qt5-svg/build
+++ b/qt-toolkit/qt5-svg/build
@@ -1,9 +1,1 @@
-#!/bin/sh -e
-
-# Without this folder, Qt can't find its own header files.
-mkdir .git
-
-qmake
-
-make
-make INSTALL_ROOT="$1" install
+../qt5-meta/build
