--- a/freedesktop/polkit/build
+++ b/freedesktop/polkit/build
@@ -1,9 +1,22 @@
-#elogind is optional -> required for sddm
-#pam -> auth
-#shadow -> altnerative auth
-duktape
-expat
-glib
-meson make
-pkgconf  make
-python   make
+#!/bin/sh -e
+
+pkg-config --exists pam || kiss l shadow || {
+    printf 'pam or shadow is required\n'
+    exit 1
+}
+
+meson setup \
+    -Dprefix=/usr \
+    -Dtests=false \
+    -Dexamples=false \
+    -Dman=false \
+    output
+
+ninja -C output
+ninja -C output install
+
+install -Dm755 polkit.run "$1/etc/sv/polkitd/run"
+
+if pkg-config --exists pam; then
+    install -Dm644 polkit.pam "$1/etc/pam.d/polkit-1"
+fi
