--- a/freedesktop/polkit/build
+++ b/freedesktop/polkit/build
@@ -1,5 +1,7 @@
 #!/bin/sh -e
 
+export DESTDIR="$1"
+
 pkg-config --exists pam || kiss l shadow || {
     printf 'pam or shadow is required\n'
     exit 1
